# Programacion_3

./: CMakeLists.txt  README.md  Test.cpp
Hilos/: Ejercicios.cpp  busqueda_binaria_paralela.cpp
Libreria Estandar/: Algoritmos.cpp  Container.cpp
Namespace/: Punto.cpp  Punto.h
Templates/: ejercicio1.cpp  ejercicio2.cpp  ejercicio3.cpp  template.cpp  variadic_templates.cpp
